name:                 Calculator
version:              0.2.0.0
synopsis:             Calculator
-- description:
-- license:
-- license-file:
homepage:             
author:               Abbath
maintainer:           pitongogi@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Calculator
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , lens
                      , mtl
  hs-source-dirs:       src
  default-language:     Haskell2010
