name:                 Calculator
version:              0.4.3.0
synopsis:             Calculator
-- description:
-- license:
-- license-file:
homepage:             
author:               Abbath
maintainer:           pitongogi@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Calculator
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , lens
                      , mtl
                      , megaparsec
                      , ieee754
                      , optparse-applicative
                      , haskeline
                      , text
                      , blaze-html
                      , scotty
                      , clay
                      , aeson
                      , bytestring
  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:        Calculator
                      , Calculator.Evaluator
                      , Calculator.Lexer
                      , Calculator.Parser
                      , Calculator.Types
                      , Calculator.MegaLexer
                      , Calculator.MegaParser
                      , Calculator.Tests
                      , Calculator.Css
  ghc-options:         -O2 -Wall -Werror