name:                 Calculator
version:              0.8.5.0
synopsis:             Calculator
-- description:
-- license:
-- license-file:
homepage:
author:               Abbath
maintainer:           pitongogi@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10
extra-source-files:   src/Calculator/AlexLexer.x
                      src/Calculator/HappyParser.y

library
  exposed-modules:    Calculator
                      , Calculator.Tests
  other-modules:      Calculator.HomebrewLexer
                      , Calculator.Evaluator
                      , Calculator.AlexLexer
                      , Calculator.HappyParser
                      , Calculator.Lexer
                      , Calculator.Parser
                      , Calculator.Types
                      , Calculator.MegaLexer
                      , Calculator.MegaParser
                      , Calculator.Css
                      , Calculator.Builtins
                      , Calculator.Generator
  build-depends:      aeson
                    , array
                    , base >= 4.7 && < 5
                    , blaze-html
                    , bytestring
                    , clay
                    , containers
                    , directory
                    , filepath
                    , haskeline
                    , http-client
                    , http-client-tls
                    , http-types
                    , ieee754
                    , integration
                    , lens
                    , lens-aeson
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , random
                    , scientific
                    , scotty
                    , telegram-bot-simple
                    , telegram-bot-api
                    , text
                    , text-metrics
                    , time
                    , vector
                    , wai
                    , wai-middleware-static
                    , wreq
  hs-source-dirs:       src
  build-tools:          alex, happy
  default-language:     Haskell2010
  ghc-options:         -O2 -Wall -fno-warn-unused-matches
                       -fwrite-ide-info -hiedir=.hie

executable Calculator
  main-is:              Main.hs
  build-depends:        Calculator
                      , base >= 4.7 && < 5
                      , optparse-applicative
  hs-source-dirs:       src-exe
  default-language:     Haskell2010
  ghc-options:         -O2 -Wall -fno-warn-unused-matches
                       -fwrite-ide-info -hiedir=.hie

test-suite Test
  type:                 exitcode-stdio-1.0
  main-is:              MainTest.hs
  hs-source-dirs:       src-test
  default-language:     Haskell2010
  build-depends:        Calculator
                      , base >= 4.7 && < 5
                      , optparse-applicative >= 0.15.1.0
