cabal-version:        3.4
name:                 Calculator
version:              12.12.1
synopsis:             Calculator
-- description:
-- license:
-- license-file:
homepage:
author:               Abbath
maintainer:           pitongogi@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:

flag telegram
  description: Enable telegram support
  default: False
  manual: True

flag raylib
  description: Enable raylib support
  default: False
  manual: True

flag discord
  description: Enable discord support
  default: False
  manual: True

library
  exposed-modules:    Calculator
                    , Calculator.Tests
  other-modules:      Calculator.Lexer
                    , Calculator.Parser
                    , Calculator.Evaluator
                    , Calculator.Types
                    , Calculator.Css
                    , Calculator.Builtins
                    , Calculator.Generator
                    , Calculator.Compiler
                    , Calculator.Utils
  build-depends:      aeson
                    , array
                    , base >= 4.7 && < 5
                    , blaze-html
                    , bytestring
                    , clay
                    , containers
                    , directory
                    , exact-real
                    , filepath
                    , haskeline
                    , http-client
                    , http-client-tls
                    , http-types
                    , lens
                    , lens-aeson
                    , mtl
                    , random
                    , scientific
                    , scotty
                    , text
                    , text-metrics
                    , time
                    , vector
                    , wai
                    , wai-middleware-static
                    , wreq
  hs-source-dirs:     src
  ghc-options:       -O2 -Wall -fno-warn-unused-matches
                     -fwrite-ide-info -hiedir=.hie
  default-language:   GHC2021
  if flag(telegram)
    build-depends:    telegram-bot-simple
                    , telegram-bot-api
    exposed-modules:  Calculator.Opts.Tel
    cpp-options:     -DTELEGRAM
  if flag(raylib)
    build-depends:    h-raylib >= 5.5.3
    exposed-modules:  Calculator.Opts.Ray
    cpp-options:     -DRAYLIB
  if flag(discord)
    build-depends:    discord-haskell >= 1.16.0
                    , dotenv
                    , unliftio
                    , req >= 3.13.4
    exposed-modules:  Calculator.Opts.Dis
    cpp-options:     -DDISCORD

executable Calculator
  main-is:              Main.hs
  other-modules:        Paths_Calculator
  build-depends:        Calculator
                      , base >= 4.7 && < 5
                      , optparse-applicative
  hs-source-dirs:       src-exe
  ghc-options:         -O2 -Wall -fno-warn-unused-matches
                       -fwrite-ide-info -hiedir=.hie
  default-language:     GHC2021
  if flag(telegram)
    cpp-options:       -DTELEGRAM
  if flag(raylib)
    cpp-options:       -DRAYLIB
  if flag(discord)
    cpp-options:       -DDISCORD

test-suite Test
  type:                 exitcode-stdio-1.0
  main-is:              MainTest.hs
  hs-source-dirs:       src-test
  build-depends:        Calculator
                      , base >= 4.7 && < 5
                      , optparse-applicative >= 0.15.1.0
  default-language:     GHC2021
